# portfolio_rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  example_data.json  flake.nix  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  rust-clippy.yml  rust.yml  update-flake.yml
img/: demo.tape
src/: agent_skill.rs  cli.rs  config.rs  context.rs  decision.rs  doctor.rs  document.rs  error.rs  lib.rs  main.rs  policy.rs  portfolio.rs  position.rs  report.rs  review.rs  simulate.rs  state.rs  theme.rs  tui.rs  validate.rs  workspace.rs
src/api/: mod.rs
src/commands/: agent.rs  decision.rs  doctor.rs  mcp.rs  mod.rs  policy.rs  portfolio.rs  report.rs  review.rs  simulate.rs  validate.rs  workspace.rs
src/services/: mod.rs  persistence.rs  portfolio_loader.rs
templates/: AGENTS.md  CLAUDE.md  INVESTMENT_POLICY.md
templates/skills/portfolio-rs/: SKILL.md
tests/: api_offline.rs  e2e_network.rs  e2e_offline.rs
