[package]
name = "portfolio_rs"
description = "A command line tool with interactive TUI for managing financial investment portfolios written in Rust."
readme = "README.md"
version = "0.6.2"
edition = "2021"
license = "MIT"
authors = ["Markus Zoppelt"]
repository = "https://github.com/MarkusZoppelt/portfolio_rs"
keywords = ["finance", "portfolio", "tui", "investment", "cli"]
categories = ["command-line-utilities", "finance"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
clap = "4.5.53"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
yahoo_finance_api = "4.0.0"
piechart = "1.0.0"
time = "0.3.44"
chrono = "0.4.42"
sled = "0.34.7"
colored = "3.0.0"
confy = { version = "2.0.0", features = ["yaml_conf"], default-features = false }
ratatui = "0.30.0"
crossterm = "0.28.1"
tui-big-text = "0.8.1"
comfy-table = "7"
once_cell = "1.21.3"
eyre = "0.6.12"
thiserror = "2.0.17"
