[package]
name = "portfolio_rs"
description = "Local-first portfolio management for humans and AI agents — CLI, TUI, library, and local HTTP API."
readme = "README.md"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Markus Zoppelt"]
repository = "https://github.com/MarkusZoppelt/portfolio_rs"
keywords = ["finance", "portfolio", "tui", "investment", "cli"]
categories = ["command-line-utilities", "finance"]

# Explicit single-member workspace so crates vendored under this repo
# (e.g. a GUI app with its own workspace) do not join this one.
[workspace]
members = ["."]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
clap = "4.6.0"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }
yahoo_finance_api = "4.0.0"
piechart = "1.0.0"
time = "0.3.47"
chrono = "0.4.44"
sled = "0.34.7"
confy = { version = "2.0.0", features = ["yaml_conf"], default-features = false }
ratatui = "0.30.0"
crossterm = "0.28.1"
tui-big-text = "0.8.4"
comfy-table = "7"
once_cell = "1.21.4"
eyre = "0.6.12"
thiserror = "2.0.18"
toml = "1.1"

# HTTP API server (api subcommand)
axum = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
